--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -9,7 +9,10 @@
 <body>
     <div class="page-header">
         <h1><a href="/">Django Girls Blog</a></h1>
-    </div>
+	{% if user_is_authentcated %}
+		<a href="{% url 'post_new' %}" class="top-menu"><span class="glyphicon glyphicon-plus"></span></a>
+    	{% endif %}
+	</div>
     <div class="content container">
         <div class="row">
             <div class="col-md-8">
